<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".PhoneAuthFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/logo_ismatech"
                android:src="@drawable/ismatech_logo" />

            <TextView
                android:id="@+id/welcome_text"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_sans_light"
                android:text="@string/authentification" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="56dp"
            android:paddingEnd="56dp">

            <TextView
                android:id="@+id/status_text"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/entrez_votre_num_ro_de_t_l_phone" />

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editext_gray_round_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icone_phone"
                        android:src="@drawable/ic_baseline_phone_18"
                        app:tint="@color/ismatech_secondary_color" />

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:ccp_hideNameCode="true"
                        app:ccp_showFlag="false" />

                    <EditText
                        android:id="@+id/phone_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Numéro de téléphone"
                        android:background="@null"
                        android:hint="@string/num_ro_de_t_l_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:textColor="@color/ismatech_secondary_color" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/phone_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_primary_round_background"
                    android:gravity="center"
                    android:text="@string/continuer"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/verification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editext_gray_round_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icone_code"
                        android:src="@drawable/ic_baseline_lock_18"
                        app:tint="@color/ismatech_secondary_color" />

                    <EditText
                        android:id="@+id/verify_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:autofillHints="Code de validation"
                        android:background="@null"
                        android:hint="@string/code_de_validation"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verify_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_primary_round_background"
                    android:gravity="center"
                    android:text="@string/continuer"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>